hphp/hack/test/typecheck/reactive/memoize_mutable4.php.exp
File "memoize_mutable4.php", line 4, characters 25-32:
Memoized functions cannot have mutable $this. (Parsing[1002])
